--- a/src/app/_templates/blog-post/blog-post.component.html
+++ b/src/app/_templates/blog-post/blog-post.component.html
@@ -8,7 +8,9 @@
   <p class="card-text">
     {{blog_post.description}}
   </p>
-  <a href="#" class="btn btn-primary">Weiterlesen &rarr;</a>
+  <a routerLink="/blog/{{blog_post.id}}" class="btn btn-primary">
+    Weiterlesen &rarr;
+  </a>
 </div>
 <div class="card-footer text-muted">
   Erstellt am {{ blog_post.created_at | date:'dd.MM.yy, h:mm' }} von
