--- a/src/app/pages/blog-post-page/blog-post-page.component.html
+++ b/src/app/pages/blog-post-page/blog-post-page.component.html
@@ -41,17 +41,6 @@
   </div>
 </div>
 
-<div class="media mb-4">
-  <img
-    class="d-flex mr-3 rounded-circle"
-    src="http://placehold.it/50x50"
-    alt=""
-  />
-  <div class="media-body">
-    <h5 class="mt-0">Commenter Name</h5>
-    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque
-    ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus
-    viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec
-    lacinia congue felis in faucibus.
-  </div>
+<div class="mb-4" *ngFor="let comment of blog_post.comments">
+  <app-blog-post-comment [comment]="comment"></app-blog-post-comment>
 </div>
