add new blog post page

--- a/src/app/_templates/sidebar/sidebar.component.html
+++ b/src/app/_templates/sidebar/sidebar.component.html
@@ -1,3 +1,7 @@
+<div class="my-4">
+  <a routerLink="/blog/new" class="btn btn-secondary new-blog">Neuen Beitrag hinzufügen</a>
+</div>
+
 <div class="card my-4">
   <h5 class="card-header">Categories</h5>
   <div class="card-body">
