--- a/src/app/pages/new-blog-post-page/new-blog-post-page.component.html
+++ b/src/app/pages/new-blog-post-page/new-blog-post-page.component.html
@@ -23,9 +23,9 @@
           ></textarea>
         </div>
       </div>
-      <button type="submit" class="btn btn-primary" (click)="saveObject()">
+      <a routerLink="/" class="btn btn-primary" (click)="saveObject()">
         Abschicken
-      </button>
+      </a>
     </div>
   </div>
 </div>
