add blog post comments page

--- a/src/app/pages/new-blog-post-page/new-blog-post-page.component.html
+++ b/src/app/pages/new-blog-post-page/new-blog-post-page.component.html
@@ -24,7 +24,7 @@
         </div>
       </div>
       <a routerLink="/" class="btn btn-primary" (click)="saveObject()">
-        Abschicken
+        Hinzufügen
       </a>
     </div>
   </div>
