--- a/src/app/_templates/navigation/navigation.component.html
+++ b/src/app/_templates/navigation/navigation.component.html
@@ -14,19 +14,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a routerLink="/" class="nav-link">
-            Home
+            Startseite
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a routerLink="/comments" class="nav-link">Kommentare</a>
         </li>
       </ul>
     </div>
