--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navigation></app-navigation>
+
 <div class="container">
   <div class="row">
     <div class="col-md-8">
@@ -9,3 +10,5 @@
     </div>
   </div>
 </div>
+
+<app-footer></app-footer>
